refactor: ProductRepository 및 ProductService 메서드 수정 사항 반영